# python_course

./: .gitignore
hw/hw_1/: index.py
hw/hw_2/: index.py
hw/hw_3/my-api-project/: pyproject.toml
hw/hw_3/my-api-project/src/my_api_project/: main.py
hw/hw_3/new_project/: new_code.py  requirements.txt
hw/hw_3/old_project/: index.py  requirements.txt
